--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "node tests/parser.test.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsdom": "^27.0.0",
     "node-fetch": "^2.7.0"
   },
   "engines": {
